--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,7 +37,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
-    # Applies to all files under models/example/
     mart:
       +materialized: table
+      finance:
+        +schema: finance
 
